:white_check_mark: add: `doctests` option for `pytest`
Closes #2

--- a/.pre-commit-config.yaml.template
+++ b/.pre-commit-config.yaml.template
@@ -69,7 +69,7 @@ repos:
       language: system
       pass_filenames: false
       stages: [push]
-      args: [tests]
+      args: [--doctest-modules]
     - id: stubtest
       name: mypy (stubtest)
       language: system
