🐳 change: post- to on-CreateCommand

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,7 +12,6 @@
 		"-v", "${env:SSH_AUTH_SOCK}:${env:SSH_AUTH_SOCK}",
 		"-e", "SSH_AUTH_SOCK=${env:SSH_AUTH_SOCK}"
 	],
-	"onCreateCommand": "echo \"export GPG_TTY=$(tty)\" >> ~/.bashrc",
-	"postCreateCommand": "gpg-agent --daemon",
+	"onCreateCommand": "gpg-agent --daemon",
 	"remoteUser": "root"
 }
