:alien: update: ref to flake8 (+)
🔥 remove: detect-aws-credentials hook

--- a/.pre-commit-config.yaml.template
+++ b/.pre-commit-config.yaml.template
@@ -37,11 +37,10 @@ repos:
       - id: check-toml
       - id: check-yaml
       - id: check-xml
-      - id: detect-aws-credentials
       - id: detect-private-key
       - id: check-added-large-files
 
-  - repo: https://gitlab.com/PyCQA/flake8
+  - repo: https://github.com/PyCQA/flake8
     rev: 5.0.4
     hooks:
       - id: flake8
